# income-prediction

./: .gitignore  Makefile  README.md  dashboard.py  dvc.yaml  params.yaml  pipeline_model.pkl  pyproject.toml  requirements.txt
.dvc/: config
docs/: mkdocs.yml
docs/docs/: index.md
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: accuracy.tsv  f1_score.tsv  precision.tsv  recall.tsv
income_classification/: __init__.py  data_loading_and_cleaning.py  data_preprocessing.py  dataset.py  features.py  plots.py
income_classification/helper/: data_helper.py  param_helper.py
income_classification/modeling/: model_evaluation.py  model_training.py  predict.py  train.py
mlartifacts/826644404328719235/12e7a2ec2a6a44d88c0c4371cc78d2e4/artifacts/: model.pkl
mlartifacts/826644404328719235/7e25b5d2eb854253901608d25b0212b1/artifacts/: metrics.json
mlartifacts/826644404328719235/cce49707181147d8b36c997b4ace7f2a/artifacts/: metrics.json  model.pkl
mlartifacts/826644404328719235/d387caebe3de40839af848056b881698/artifacts/: model.pkl
